Microservice-EKS-Project/k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: 217422362745.dkr.ecr.us-east-1.amazonaws.com/order-service:v1
        ports:
        - containerPort: 5000
