Microservice-EKS-Project/k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: 217422362745.dkr.ecr.us-east-1.amazonaws.com/payment-service:v1
        ports:
        - containerPort: 5000
