Microservice-EKS-Project/k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 217422362745.dkr.ecr.us-east-1.amazonaws.com/user-service:v1
        ports:
        - containerPort: 5000
