Microservice-EKS-Project/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: user-service
spec:
  hosts:
  - user-service

  http:
  - route:
    - destination:
        host: user-service
        subset: v1
      weight: 80

    - destination:
        host: user-service
        subset: v2
      weight: 20

    retries:
      attempts: 3
      perTryTimeout: 2s
